@@ -1,8 +1,11 @@
-CHANGES.txt - 2010-02-12
+CHANGES.txt - 2010-02-28
 ------------------------
 
 CHANGES IN CUPS V1.5b1
 
+	- CUPS no longer supports the old ~/.cupsrc or ~/.lpoptions files from
+	  CUPS 1.1.x.  The ~/.cups/client.conf and ~/.cups/lpoptions files that
+	  were introduced in CUPS 1.2 must now be used.
 	- The ipptest tool is now a first-class user program and has several
 	  improvements along with new documentation (STR #3484)
 	- The cupstestppd tool now warns about non-unique filenames and
